--- a/assets/intl/intl_en.arb
+++ b/assets/intl/intl_en.arb
@@ -58,5 +58,16 @@
   "otp_verification_instruction": "Enter the verification code we send you on:",
   "otp_verification_didnt_receive": "Didn't receive code?",
   "otp_verification_resend": "Resend",
-  "otp_verification_continue_button": "Continue"
+  "otp_verification_continue_button": "Continue",
+
+  "@_HOME": {},
+  "home_your_location": "Your Location",
+  "home_header_title": "Provide the best food for you",
+  "home_select_location": "Select Location",
+  "home_find_by_category": "Find by Category",
+  "home_see_all": "See All",
+  "home_bottom_nav_home": "Home",
+  "home_bottom_nav_shopping": "Shopping",
+  "home_bottom_nav_chat": "Chat",
+  "home_bottom_nav_profile": "Profile"
 }
