--- a/assets/intl/intl_es.arb
+++ b/assets/intl/intl_es.arb
@@ -76,5 +76,8 @@
   "reset_password_instruction": "Tu nueva contraseña debe ser diferente de la contraseña previamente usada",
   "reset_password_new_password_label": "Nueva Contraseña",
   "reset_password_confirm_password_label": "Confirmar Contraseña",
-  "reset_password_verify_button": "Verificar Cuenta"
+  "reset_password_verify_button": "Verificar Cuenta",
+  "reset_password_success_title": "Contraseña Cambiada",
+  "reset_password_success_message": "Contraseña cambiada exitosamente, puedes iniciar sesión nuevamente con tu nueva contraseña",
+  "reset_password_success_back_to_login": "Volver al inicio de sesión"
 }
