feat: Implement search functionality with filters and results display
- Added SearchBloc, SearchEvent, and SearchState to manage search logic.
- Created SearchPage with a search bar and results grid.
- Implemented search filters in a bottom sheet for category and price range.
- Added EmptySearchState widget for no results scenario.
- Updated localization for search-related strings.
- Registered SearchBloc in the dependency injector.
- Enhanced FoodItemCard and HomeHeader to support navigation to search.
- Included assets for search images.

--- a/assets/intl/intl_en.arb
+++ b/assets/intl/intl_en.arb
@@ -84,5 +84,17 @@
   "@_NOTIFICATIONS": {},
   "notification_page_title": "Notification",
   "notification_section_today": "Today",
-  "notification_section_yesterday": "Yesterday"
+  "notification_section_yesterday": "Yesterday",
+
+  "@_SEARCH": {},
+  "search_page_title": "Find Your Favorite Food",
+  "search_placeholder": "Search for food...",
+  "search_no_results_title": "We couldn't find any result!",
+  "search_no_results_description": "Please check your search for any typos or spelling errors, or try a different search term.",
+  "search_filter_title": "Filters",
+  "search_filter_category_label": "Category",
+  "search_filter_price_label": "Price Range",
+  "search_filter_all_categories": "All Categories",
+  "search_filter_apply": "Apply Filters",
+  "search_filter_reset": "Reset"
 }
